--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,6 +26,11 @@ body {
     margin-right: 20px;
 }
 
+.top-nav-content .logo {
+    border-right: 1px solid white;
+    width: 240px;
+}
+
 .top-nav-content a {
     text-decoration: none;
     color: rgb(250, 250, 250);
