--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,6 +42,16 @@ body {
     justify-content: center;
     align-items: center;
     display: flex;
-    height: 100vh;
-    width: 100%;
+    height: 50%;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin-top: 20%;
+    border-radius: 10px;
+}
+
+.hero .heroText {
+    display: flex;
+    flex-direction: column;
 };
